fix: mobile overflow-x

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -232,3 +232,9 @@ body {
 		opacity: 0.5;
 	}
 }
+@media (max-width: 768px) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
+
